trying to fix the db connection being tooo blockyyy